# tab-memory-manager

./: Cargo.toml  README.md  grafana-dashboard.json
assets/: .$architecture.drawio.bkp  architecture.drawio
assets/debug/generate-graph/: README.md  draw_cpu_usage_graph.py  draw_rss_graph.py  get-tab-data.sh
src/: config.rs  config.toml  main.rs  mini_tab_infos_server.rs  output_tab_data_server.rs  status.rs  tab_data_requester.rs  tab_infos_listener.rs  tab_killer.rs
tab-infos/: background.js  manifest.json
