[package]
name = "tab-memory-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
astra = "0.4.0"
debug_print = "1.0.0"
dirs = "6.0.0"
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.0"
thousands = "0.2.0"
toml = "0.9.6"
ws = "0.9.2"
